# Hardware-based-password-manager

./: .gitignore  CMakeLists.txt  README.md  generate_messaging.sh  main.c  proto.bitproto  proto_bp.c  proto_bp.h  requirements.txt  server_example.c  sonar-project.properties
.github/workflows/: build.yaml  cmake-single-platform.yml  sonarcloud.yml
AES/: CMakeLists.txt
AES/inc/: AES.h  test_aes.h
AES/src/: AES.c  test_aes.c
ECDH/: CMakeLists.txt
ECDH/inc/: ecdh.h  test_ecdh.h
ECDH/src/: ecdh.c  test_ecdh.c
aes_crypto/: CMakeLists.txt
aes_crypto/inc/: aes_crypto.h
aes_crypto/src/: aes_crypto.c
app/inc/: app.h
app/src/: app.c
bitproto/: CMakeLists.txt
bitproto/inc/: bitproto.h
bitproto/src/: bitproto.c
circular_buffer/: CMakeLists.txt
circular_buffer/inc/: circular_buffer.h
circular_buffer/src/: circular_buffer.c
compact25519/: CMakeLists.txt
crypto_ctx/inc/: crypto_ctx.h
crypto_ctx/src/: crypto_ctx.c
customer_bank/: CMakeLists.txt
customer_bank/inc/: customer_bank.h
customer_bank/src/: customer_bank.c
debug/: debug.c  debug.h
design/: BasicCommFlow.puml  client.puml
gcm/inc/: aes-gcm.h  aes.h
gcm_api/inc/: gcm_api.h
gcm_api/src/: gcm_api.c
key_wrapping/inc/: kwp.h
key_wrapping/src/: kwp.c
messaging_bp/: CMakeLists.txt  messaging.bitproto
messaging_bp/inc/: messaging_bp.h
messaging_bp/src/: messaging_bp.c
messenger/inc/: messenger.h
messenger/src/: messenger.c
python_cli/: AesCBCCrypto.py  Application.py  Client.py  ConnectionHandler.py  Handshake.py  ICrypto.py  IStage.py  State.py  User.py  cli_tool.py  client.py  gcm.py  gowno.py  json_reader.py  messaging.bitproto  messaging_bp.py  messanger.py  python_crypto_wrapper.py  requirements.txt  userdata.json
test/: second_test.c  test_main.c
user_context/inc/: user_context.h
user_context/src/: user_context.c
user_store/: CMakeLists.txt
user_store/inc/: user_store.h
user_store/src/: user_store.c
utils/: standard_def.h
windows_implementation/: main.c
